# nd0821-c3-starter-code

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Aptfile  LICENSE.txt  Makefile  PYTHON_3_13_UPDATES.md  Procfile  README.md  api_requests.py  conda_requirements.txt  config.json  config.yml  conftest.py  data_model.py  dvc.yaml  dvc_on_heroku_instructions.md  environment.yaml  get_inference.py  live_endpoint_query.py  live_query.py  main copy.py  main.py  mlops_proj3_tree.txt  mlops_proj3_tree_dirs.txt  model_card.md  model_card_template.md  new_user_credentials.csv  path.yml  post_inference.py  post_test_live.py  procfile  pyproject.toml  query_live_api.ipynb  render.yaml  requirements.in  requirements.txt  runtime.txt  sanitycheck.py  setup.py  (+8 more)
.dvc/: config  config copy
.github/: dependabot.yml
.ipynb_checkpoints/: EDA-checkpoint.ipynb
config/: config.yml
data/: .gitignore  census.csv  census.csv.dvc  census_bruto.csv  census_clean.csv.dvc  census_clear.csv.dvc  census_test.csv.dvc  check_data.ipynb  preproc_census.csv.dvc  profile.html
dvc_plots/: index.html
eda/: EDA.ipynb
logs/: .gitignore
metrics/: .gitignore
ml/: model.py  test_model.py  train_model.py
model/: .gitignore  ci_model.joblib.dvc  classifier.pkl.dvc  config.py  encoder.pkl  encoder_dtc.pkl  encoder_model.joblib.dvc  lb.pkl  lb_model.joblib.dvc  model.pkl  model_dtc.pkl  overall_metrics.json  slice_output.txt  test_model_save.pkl
models/: .gitignore  final_col_transformer_artifact.pkl  final_xgb_cls_artifact.pkl
outputs/: slice_output.txt
project/: main.py  setup.py
(+198 files in other folders)
